crates/frontend/tests/snapshots/types__check_failing@type_mismatch.nemo.snap
---
source: crates/frontend/tests/types.rs
expression: err_buf
input_file: crates/frontend/tests/type_errors/type_mismatch.nemo
---
[15] Error: Type mismatch. Expected i32, but got f32
   ╭─[source:1:13]
   │
 1 │ global x : i32 = 10.0
   │                  ──┬─  
   │                    ╰─── Type mismatch. Expected i32, but got f32
───╯
