crates/frontend/tests/snapshots/types__check_failing@type_param_in_variant_struct.nemo.snap
---
source: crates/frontend/tests/types.rs
expression: err_buf
input_file: crates/frontend/tests/type_errors/type_param_in_variant_struct.nemo
---
[23] Error: Can't declare type parameters for structs in a variant.
   ╭─[source:1:13]
   │
 2 │   struct None[a] {}
   │          ──┬─  
   │            ╰─── Can't declare type parameters for structs in a variant.
───╯
