crates/frontend/tests/snapshots/types__check_failing@unknown_field.nemo.snap
---
source: crates/frontend/tests/types.rs
expression: err_buf
input_file: crates/frontend/tests/type_errors/unknown_field.nemo
---
[13] Error: Unknown field. F does not have a field named y
   ╭─[source:2:2]
   │
 6 │   F { x = 10, y = 20 }.y;
   │               ┬  
   │               ╰── Unknown field. F does not have a field named y
───╯

[13] Error: Unknown field. F does not have a field named y
   ╭─[source:2:2]
   │
 6 │   F { x = 10, y = 20 }.y;
   │                        ┬  
   │                        ╰── Unknown field. F does not have a field named y
───╯

[13] Error: Unknown field. F does not have a field named y
   ╭─[source:2:2]
   │
 8 │   set f.y = 20;
   │         ┬  
   │         ╰── Unknown field. F does not have a field named y
───╯
