crates/frontend/tests/snapshots/types__check_failing@unknown_struct.nemo.snap
---
source: crates/frontend/tests/types.rs
expression: err_buf
input_file: crates/frontend/tests/type_errors/unknown_struct.nemo
---
[07] Error: Unknown type Unknown
   ╭─[source:2:1]
   │
 2 │   let x = Unknown {}
   │           ───┬───  
   │              ╰───── Unknown type Unknown
───╯
