crates/frontend/tests/snapshots/types__check_failing@unknown_type.nemo.snap
---
source: crates/frontend/tests/types.rs
expression: err_buf
input_file: crates/frontend/tests/type_errors/unknown_type.nemo
---
[07] Error: Unknown type Unknown
   ╭─[source:1:13]
   │
 1 │ fn main() -> Unknown {}
   │              ───┬───  
   │                 ╰───── Unknown type Unknown
───╯
